// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / Text Actions 1`] = `
Array [
  <p>
    Actions are a bit laggy because of the @storybook/addon-actions. Prod performance is not affected.
  </p>,
  .c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 22px;
}

.c4 {
  position: relative;
}

<div
    className="c0"
  >
    <label
      className="c1"
      hidden={false}
    >
      <span
        className="c2"
      >
        Label 
        <span
          className="c3"
        >
          <div
            className="c4"
          >
            <input
              className="c5"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              placeholder="Placeholder"
              type="text"
            />
          </div>
        </span>
      </span>
    </label>
  </div>,
]
`;

exports[`Storyshots Molecules | Input / Text Both addons 1`] = `
.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
  padding-left: 32px;
  padding-right: 40px;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 22px;
}

.c4 {
  position: relative;
}

.c6 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  left: 0;
}

.c9 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      Label 
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          <input
            className="c5"
            placeholder="Placeholder"
            type="text"
          />
          <div
            className="c6 c7"
            position="left"
          >
            <svg
              aria-hidden="true"
              className="c8"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              size={4}
              viewBox="0 0 24 24"
            >
              <path
                d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                id="a"
              />
            </svg>
          </div>
          <div
            className="c9 c7"
            position="right"
          >
            SEK
          </div>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Default 1`] = `
.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 22px;
}

.c4 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      Label 
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          <input
            className="c5"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Disabled +addon 1`] = `
.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #EBEBE8;
  padding-left: 32px;
  padding-right: 40px;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 22px;
}

.c4 {
  position: relative;
}

.c6 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  left: 0;
}

.c9 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      Label 
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          <input
            className="c5"
            disabled={true}
            placeholder="Placeholder"
            type="text"
          />
          <div
            className="c6 c7"
            position="left"
          >
            <svg
              aria-hidden="true"
              className="c8"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              size={4}
              viewBox="0 0 24 24"
            >
              <path
                d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                id="a"
              />
            </svg>
          </div>
          <div
            className="c9 c7"
            position="right"
          >
            SEK
          </div>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Disabled 1`] = `
.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #EBEBE8;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 22px;
}

.c4 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      Label 
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          <input
            className="c5"
            disabled={true}
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Edge cases 1`] = `
.c4 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c3 {
  width: 200px;
  display: inline-block;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c8:hover {
  border-color: #4B4B46;
}

.c8:focus {
  border-color: #0046FF;
}

.c8::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c8::-moz-placeholder {
  line-height: 22px;
}

.c7 {
  position: relative;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Long values
    </div>
    <div>
      <div
        className="c3"
      >
        <label
          className="c4"
          hidden={false}
        >
          <span
            className="c5"
          >
            Too long label, goes into ellipsis. Consider smaller label or bigger input 
            <span
              className="c6"
            >
              <div
                className="c7"
              >
                <input
                  className="c8"
                  placeholder="If placeholder goes too long though, it probably should be truncated into ellipsis, right?"
                  type="text"
                />
              </div>
            </span>
          </span>
        </label>
        <div>
          <span
            className="c9"
          >
            This is much neccessary info wow
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Long extraInfo
    </div>
    <div>
      <div
        className="c3"
      >
        <label
          className="c4"
          hidden={false}
        >
          <span
            className="c5"
          >
            Small label 
            <span
              className="c6"
            >
              <div
                className="c7"
              >
                <input
                  className="c8"
                  placeholder=""
                  type="text"
                />
              </div>
            </span>
          </span>
        </label>
        <div>
          <span
            className="c9"
          >
            Big extra fat extraInfo that will wrap over many lines. Be careful with this pattern, use it only with small texts!
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Text Error if empty text 1`] = `
.c7 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #FF1900;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 22px;
}

.c4 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      My awesome text field 
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          <input
            aria-invalid={true}
            className="c5"
            onChange={[Function]}
            placeholder="This is a placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
  <div>
    <span
      className="c6"
    >
      <div
        className="c7"
      >
        Error: 
      </div>
      Something went wrong
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Text Extra info below 1`] = `
.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 22px;
}

.c4 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      Label 
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          <input
            className="c5"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
  <div>
    <span
      className="c6"
    >
      Use wisely this space
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Text Extra info with error 1`] = `
.c7 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #FF1900;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 22px;
}

.c4 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      My awesome text field 
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          <input
            aria-invalid={true}
            className="c5"
            onChange={[Function]}
            placeholder="This is a placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
  <div>
    <span
      className="c6"
    >
      <div
        className="c7"
      >
        Error: 
      </div>
      Enter text
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Text Full width 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:765px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Full width inputs
    </span>
  </div>,
  .c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  width: 100%;
  display: inline-block;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c8:hover {
  border-color: #4B4B46;
}

.c8:focus {
  border-color: #0046FF;
}

.c8::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c8::-moz-placeholder {
  line-height: 22px;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
  padding-left: 32px;
}

.c9:hover {
  border-color: #4B4B46;
}

.c9:focus {
  border-color: #0046FF;
}

.c9::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c9::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c9:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c9::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c9:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c9::-moz-placeholder {
  line-height: 22px;
}

.c13 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
  padding-right: 40px;
}

.c13:hover {
  border-color: #4B4B46;
}

.c13:focus {
  border-color: #0046FF;
}

.c13::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c13::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c13:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c13::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c13:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c13::-moz-placeholder {
  line-height: 22px;
}

.c7 {
  position: relative;
}

.c10 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  left: 0;
}

.c14 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Default
      </div>
      <div>
        <div
          className="c3"
          width="100%"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              Label 
              <span
                className="c6"
              >
                <div
                  className="c7"
                >
                  <input
                    className="c8"
                    placeholder="Placeholder"
                    type="text"
                  />
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Left addon
      </div>
      <div>
        <div
          className="c3"
          width="100%"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              Label 
              <span
                className="c6"
              >
                <div
                  className="c7"
                >
                  <input
                    className="c9"
                    placeholder="Placeholder"
                    type="text"
                  />
                  <div
                    className="c10 c11"
                    position="left"
                  >
                    <svg
                      aria-hidden="true"
                      className="c12"
                      focusable="false"
                      preserveAspectRatio="xMidYMid meet"
                      role="presentation"
                      size={4}
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                        id="a"
                      />
                    </svg>
                  </div>
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Right addon
      </div>
      <div>
        <div
          className="c3"
          width="100%"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              Label 
              <span
                className="c6"
              >
                <div
                  className="c7"
                >
                  <input
                    className="c13"
                    placeholder="Placeholder"
                    type="text"
                  />
                  <div
                    className="c14 c11"
                    position="right"
                  >
                    SEK
                  </div>
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules | Input / Text Hidden label 1`] = `
.c1 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 22px;
}

.c4 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={true}
  >
    <span
      className="c2"
    >
      Label 
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          <input
            className="c5"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Left addon 1`] = `
.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
  padding-left: 32px;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 22px;
}

.c4 {
  position: relative;
}

.c6 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  left: 0;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      Label 
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          <input
            className="c5"
            placeholder="Placeholder"
            type="text"
          />
          <div
            className="c6 c7"
            position="left"
          >
            <svg
              aria-hidden="true"
              className="c8"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              size={4}
              viewBox="0 0 24 24"
            >
              <path
                d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                id="a"
              />
            </svg>
          </div>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Required 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:765px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Required
    </span>
  </div>,
  .c4 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  width: 200px;
  display: inline-block;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c8:hover {
  border-color: #4B4B46;
}

.c8:focus {
  border-color: #0046FF;
}

.c8::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c8::-moz-placeholder {
  line-height: 22px;
}

.c7 {
  position: relative;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Default (without star)
      </div>
      <div>
        <div
          className="c3"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              Label 
              <span
                className="c6"
              >
                <div
                  className="c7"
                >
                  <input
                    className="c8"
                    placeholder="Placeholder"
                    required={true}
                    type="text"
                  />
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        With star
      </div>
      <div>
        <div
          className="c3"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              Label *
              <span
                className="c6"
              >
                <div
                  className="c7"
                >
                  <input
                    className="c8"
                    placeholder="Placeholder"
                    required={true}
                    type="text"
                  />
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules | Input / Text Right addon 1`] = `
.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
  padding-right: 40px;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 22px;
}

.c4 {
  position: relative;
}

.c6 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      Label 
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          <input
            className="c5"
            placeholder="Placeholder"
            type="text"
          />
          <div
            className="c6 c7"
            position="right"
          >
            SEK
          </div>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Simple login form 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:not(:first-child) {
  padding-top: 16px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -8px;
  margin-right: -8px;
}

.c1 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c12 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c4 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c14 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  padding: 4px 12px;
  min-height: 32px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c14,
.c14[type='button'],
.c14[type='reset'],
.c14[type='submit'] {
  -webkit-appearance: button;
}

.c14::-moz-focus-inner,
.c14[type='button']::-moz-focus-inner,
.c14[type='reset']::-moz-focus-inner,
.c14[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c14:-moz-focusring,
.c14[type='button']:-moz-focusring,
.c14[type='reset']:-moz-focusring,
.c14[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c14:hover {
  background-color: hsl(223.5,100%,45%);
}

.c14:active {
  background-color: hsl(223.5,100%,40%);
}

.c14::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c3 {
  width: 100%;
  display: inline-block;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c8:hover {
  border-color: #4B4B46;
}

.c8:focus {
  border-color: #0046FF;
}

.c8::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c8::-moz-placeholder {
  line-height: 22px;
}

.c10 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #FF1900;
  position: relative;
  background-color: #FFFFFF;
}

.c10:hover {
  border-color: #4B4B46;
}

.c10:focus {
  border-color: #0046FF;
}

.c10::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c10::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c10:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c10::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c10:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c10::-moz-placeholder {
  line-height: 22px;
}

.c7 {
  position: relative;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        width="100%"
      >
        <label
          className="c4"
          hidden={false}
        >
          <span
            className="c5"
          >
            Username 
            <span
              className="c6"
            >
              <div
                className="c7"
              >
                <input
                  className="c8"
                  placeholder="Username"
                  type="text"
                />
              </div>
            </span>
          </span>
        </label>
        <div>
          <span
            className="c9"
          >
            Please provide your username (worst UX right here)
          </span>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        width="100%"
      >
        <label
          className="c4"
          hidden={false}
        >
          <span
            className="c5"
          >
            Password 
            <span
              className="c6"
            >
              <div
                className="c7"
              >
                <input
                  aria-invalid={true}
                  className="c10"
                  placeholder="Password"
                  type="text"
                />
              </div>
            </span>
          </span>
        </label>
        <div>
          <span
            className="c11"
          >
            <div
              className="c12"
            >
              Error: 
            </div>
            Simple error
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c13"
  >
    <button
      className="c14"
      type="button"
    >
      <span
        className="c15"
      >
        Login
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Text Small 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:765px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Size = "s"
    </span>
  </div>,
  .c15 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c4 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c16 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c3 {
  width: 200px;
  display: inline-block;
}

.c9 {
  width: 100%;
  display: inline-block;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c8:hover {
  border-color: #4B4B46;
}

.c8:focus {
  border-color: #0046FF;
}

.c8::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c8:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c8::-moz-placeholder {
  line-height: 15px;
}

.c10 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #FF1900;
  position: relative;
  background-color: #FFFFFF;
}

.c10:hover {
  border-color: #4B4B46;
}

.c10:focus {
  border-color: #0046FF;
}

.c10::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c10::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c10:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c10::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c10:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c10::-moz-placeholder {
  line-height: 15px;
}

.c13 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
  padding-left: 32px;
}

.c13:hover {
  border-color: #4B4B46;
}

.c13:focus {
  border-color: #0046FF;
}

.c13::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c13::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c13:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c13::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c13:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c13::-moz-placeholder {
  line-height: 15px;
}

.c17 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
  padding-right: 40px;
}

.c17:hover {
  border-color: #4B4B46;
}

.c17:focus {
  border-color: #0046FF;
}

.c17::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c17::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c17:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c17::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c17:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c17::-moz-placeholder {
  line-height: 15px;
}

.c7 {
  position: relative;
}

.c14 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  left: 0;
}

.c18 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Default
      </div>
      <div>
        <div
          className="c3"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              Label 
              <span
                className="c6"
              >
                <div
                  className="c7"
                >
                  <input
                    className="c8"
                    placeholder="Placeholder"
                    type="text"
                  />
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Full width
      </div>
      <div>
        <div
          className="c9"
          width="100%"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              Label 
              <span
                className="c6"
              >
                <div
                  className="c7"
                >
                  <input
                    className="c8"
                    placeholder="Placeholder"
                    type="text"
                  />
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Error
      </div>
      <div>
        <div
          className="c3"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              Label 
              <span
                className="c6"
              >
                <div
                  className="c7"
                >
                  <input
                    aria-invalid={true}
                    className="c10"
                    placeholder="Placeholder"
                    type="text"
                  />
                </div>
              </span>
            </span>
          </label>
          <div>
            <span
              className="c11"
            >
              <div
                className="c12"
              >
                Error: 
              </div>
              Some error text that will wrap itself over couple of lines
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Left addon
      </div>
      <div>
        <div
          className="c3"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              Label 
              <span
                className="c6"
              >
                <div
                  className="c7"
                >
                  <input
                    className="c13"
                    placeholder="Placeholder"
                    type="text"
                  />
                  <div
                    className="c14 c15"
                    position="left"
                  >
                    <svg
                      aria-hidden="true"
                      className="c16"
                      focusable="false"
                      preserveAspectRatio="xMidYMid meet"
                      role="presentation"
                      size={4}
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                        id="a"
                      />
                    </svg>
                  </div>
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Right addon
      </div>
      <div>
        <div
          className="c3"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              Label 
              <span
                className="c6"
              >
                <div
                  className="c7"
                >
                  <input
                    className="c17"
                    placeholder="Placeholder"
                    type="text"
                  />
                  <div
                    className="c18 c15"
                    position="right"
                  >
                    SEK
                  </div>
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules | Input / Text Success 1`] = `
.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #00D200;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 22px;
}

.c4 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      Label 
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          <input
            className="c5"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text With auto focus 1`] = `
.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 22px;
}

.c4 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      Label 
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          <input
            autoFocus={true}
            className="c5"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text With default value (Uncontrolled behaviour) 1`] = `
.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 22px;
}

.c4 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      Label 
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          <input
            className="c5"
            defaultValue="Some predefined text"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text With value (Controlled behaviour) 1`] = `
.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5::placeholder {
  line-height: 17px;
  color: #6E6E69;
}

.c5:-ms-input-placeholder {
  line-height: 1;
  color: #6E6E69;
}

.c5::-moz-placeholder {
  line-height: 22px;
}

.c4 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      Label 
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          <input
            className="c5"
            placeholder="Placeholder"
            type="text"
            value="Some predefined text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;
